<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_infos"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:gravity="bottom"
    android:background="@color/primary_color"
    android:padding="10dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:clickable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearance="@style/softRoundCorner"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/music_icon"
            android:id="@+id/album_cover_info"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/ic_saxophone_svg"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/song_title_info"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/name_of_the_song"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/text_color"/>

    <ImageView
        android:contentDescription="@string/previous"
        android:id="@+id/previous"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:src="@drawable/ic_baseline_skip_previous_24"
        android:layout_gravity="center"
        app:tint="@color/text_color"/>

    <ImageView
        android:contentDescription="@string/pause"
        android:id="@+id/pause_play"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_pause_circle_outline_24"
        app:tint="@color/text_color"/>

    <ImageView
        android:contentDescription="@string/next"
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_skip_next_24"
        app:tint="@color/text_color"/>
</LinearLayout>