<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicPlayerActivity"
    android:background="@color/primary_color"
    android:id="@+id/music_player"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:paddingTop="5dp">

        <ImageView
            android:contentDescription="@string/back_button"
            android:id="@+id/quit_activity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:tint="@color/text_color"/>

        <TextView
            android:id="@+id/song_title"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:ellipsize="marquee"
            android:gravity="center"
            android:layout_gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:text="@string/title_of_the_song"
            android:textColor="@color/text_color"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"/>

        <ImageView
            android:contentDescription="@string/current_list"
            android:id="@+id/current_playlist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_playlist_play_24"
            app:tint="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/album_cover_big"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:shapeAppearance="@style/softRoundCorner"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/album_art"
            android:src="@drawable/icone_musique">

        </com.google.android.material.imageview.ShapeableImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/text_color"
                android:thumbTint="@color/text_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/timer"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer"
                    android:layout_gravity="bottom"
                    android:textColor="@color/text_color"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sort"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/sort"
                    android:src="@drawable/ic_baseline_sync_24"/>

                <ImageView
                    android:id="@+id/previous"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/previous"
                    android:src="@drawable/ic_baseline_skip_previous_24"/>

                <ImageView
                    android:id="@+id/pause_play"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/pause_play"
                    android:src="@drawable/ic_baseline_pause_circle_outline_24"/>

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/next"
                    android:src="@drawable/ic_baseline_skip_next_24"/>

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/ic_baseline_favorite_border_24"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>