<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateShortcutActivity"
    android:orientation="vertical"
    android:background="@color/secondary_color">

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/primary_color">

        <ImageView
            android:id="@+id/quit_activity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/text_color"/>

        <TextView
            android:textStyle="bold"
            android:id="@+id/title_activity"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:text="@string/add_a_shortcut"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/primary_color"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/primary_color"
        app:tabMode="fixed"
        app:tabIndicatorGravity="bottom"
        app:tabTextColor="@color/text_color"
        app:tabSelectedTextColor="@color/white"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorHeight="4dp"
        app:tabIndicatorColor="@color/secondary_color">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musics" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albums" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artists" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

</LinearLayout>