<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_color"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <LinearLayout
        android:id="@+id/add_to_a_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/add_to_a_playlist_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/add_to_a_playlist"
            android:src="@drawable/ic_baseline_add_24"/>

        <TextView
            android:id="@+id/add_to_a_playlist_text"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_to_a_playlist"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/remove_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/remove"
            android:src="@drawable/ic_baseline_delete_24"/>

        <TextView
            android:id="@+id/delete_music"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete_music"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/modify_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/modify_music_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/modify"
            android:src="@drawable/ic_baseline_edit_24"/>

        <TextView
            android:id="@+id/modify_music_text"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/modify"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/play_next_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/play_next"
            android:src="@drawable/ic_baseline_playlist_play_24"/>

        <TextView
            android:id="@+id/play_next_text"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_next"
            android:gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>