<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyMusicInfoActivity"
    android:background="@color/primary_color"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:id="@+id/modify_playlist"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <TextView
        android:id="@+id/title_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_playlist_informations"
        android:textColor="@color/third_color"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        >
    </TextView>

    <TextView
        android:id="@+id/playlist_art"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist_image"
        android:textColor="@color/third_color"
        android:layout_below="@+id/title_activity"
        android:textSize="17sp"
        android:layout_marginTop="50dp"

        >
    </TextView>

    <ImageView
        android:id="@+id/playlist_cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/playlist_art"
        android:layout_marginTop="10dp"
        android:src="@drawable/michael">

    </ImageView>

    <TextView
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playlist_cover"
        android:layout_marginTop="10dp"
        android:text="@string/name_of_the_playlist"
        android:textColor="@color/third_color"
        android:textSize="17sp">

    </TextView>

    <EditText
        android:id="@+id/edit_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playlist_name"
        android:backgroundTint="@color/third_color"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/third_color"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_marginRight="50dp"
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/cancel"
                android:textColor="@color/third_color"
                android:textSize="14sp"
                android:layout_marginEnd="50dp">
            </Button>

            <Button
                android:id="@+id/validate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/ok"
                android:textColor="@color/third_color"
                android:textSize="14sp">
            </Button>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>